# FastHenry-ACA-

./: CMakeLists.txt  LICENSE  README
doc/: FastHenry+ACA user manual.docx
include/: cmplx.h  gp.h  induct.h  mulGlobal.h  mulStruct.h  output.h  patran.h  resusage.h
lib/sparse/: CMakeLists.txt
lib/sparse/include/: spConfig.h
lib/sparse/src/: spFactor.c
src/: ACA_new.cpp  BreakupSeg.c  MLACA.cpp  Prec_cost.c  Precond.c  SVD.cpp  SetupComputePsi.c  SetupMulti.c  addgroundplane.c  barnoldi.c  bigmeshPre.c  bigmeshPre_direct.c  calcp.c  capsolve.c  contact.c  cx_ludecomp.c  default_opts.c  deg_mutual.c  direct.c  dist_betw_fils.c  fillM.c  find_nonuni_path.c  findpaths.c  gmres.c  hole.c  induct.c  joelself.c  mulDo.c  mulGlobal.c  mulLocal.c  mulMats.c  mulMulti.c  mulSetup.c  mutual.c  newPrecond.c  output.c  parse_command_line.c  readGeom.c  read_tree.c  regurgitate.c  (+3 more)
